Fix: Use projectId (singular) instead of projectIds - v1.1.1

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -8,7 +8,7 @@ on:
         type: choice
         description: "Linear Team ID to create the issue for"
         options:
-          - CHR
+          - HYP
       title:
         required: true
         description: "Title for the Linear Issue"
